@@ -1,3 +1,13 @@
+2000-01-21  Eric Melski  <ericm@scriptics.com>
+
+	* library/tkfbox.tcl: Fixed bug relating to incorrect parent
+	values for error message boxes displayed by the file dialog (bug
+	#3616).
+
+	* tests/text.test: 
+	* generic/tkText.c: Fixed bug relating to regexp searching for
+	empty lines; previously, the starting line was ignored. (bug #1643).
+
 2000-01-20  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* library/text.tcl: fixed double-click selection behavior where
